--- a/test.html
+++ b/test.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
 
-<link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/services/pressure-washing.html">
-
-<meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Fast, insured and affordable. Call 07735 873694.">
+<meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Call 07735 873694.">
 <meta name="robots" content="index, follow">
 
-<link rel="preload" as="image" href="/images/logo.webp" />
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{ -webkit-text-size-adjust:100%; }
 
 body{
 margin:0;
-padding:0;
 font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
-
-input#sqm{ font-size:25px; }
 
 /* HEADER */
 header{
@@ -47,30 +44,13 @@ padding:14px 28px;
 background:#000;
 color:#fff;
 font-size:19px;
-text-decoration:none;
 font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
+text-decoration:none;
+min-height:48px;
 }
 .call-btn:hover{ background:#333; }
-
-/* LIGHTBOX */
-.lightbox{
-display:none;
-position:fixed;
-z-index:9999;
-inset:0;
-background:rgba(0,0,0,0.85);
-align-items:center;
-justify-content:center;
-}
-.lightbox img{
-max-width:95%;
-max-height:95%;
-border-radius:6px;
-box-shadow:0 0 20px #000;
-}
-.lightbox:target{ display:flex; }
 
 /* CONTENT */
 main{
@@ -82,6 +62,64 @@ padding:25px 15px;
 
 h1,h2,h3{ color:#111; }
 
+/* FORM ACCESSIBILITY */
+form label{
+display:block;
+font-weight:bold;
+margin-bottom:6px;
+cursor:pointer;
+}
+
+input[type="number"]{
+width:100%;
+padding:12px;
+font-size:16px;
+margin-bottom:15px;
+}
+
+.form-option{
+display:flex;
+align-items:center;
+gap:12px;
+padding:10px 8px;
+margin-bottom:12px;
+}
+
+.form-option input{
+width:22px;
+height:22px;
+}
+
+button{
+min-height:48px;
+min-width:48px;
+cursor:pointer;
+}
+
+button:focus,
+a:focus,
+input:focus{
+outline:3px solid #27ae60;
+outline-offset:2px;
+}
+
+/* LIGHTBOX */
+.lightbox{
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+z-index:9999;
+align-items:center;
+justify-content:center;
+}
+.lightbox img{
+max-width:95%;
+max-height:95%;
+border-radius:6px;
+}
+.lightbox:target{ display:flex; }
+
 /* FOOTER */
 footer{
 background:#000;
@@ -91,68 +129,14 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
-footer a{ color:#fff; margin:0 8px; text-decoration:none; }
+footer a{
+color:#fff;
+text-decoration:none;
+margin:6px 10px;
+display:inline-block;
+padding:8px 12px;
+}
 </style>
-
-<!-- LOCAL BUSINESS SCHEMA -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"url":"https://homerepairs4u.com/",
-"image":"https://homerepairs4u.com/images/logo.webp",
-"@id":"https://homerepairs4u.com/#pressurewashing",
-"description":"Professional pressure washing, jet washing and exterior surface cleaning in Askern DN6 and all areas within 10 miles.",
-"telephone":"+447735873694",
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"postalCode":"DN6",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
-},
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
-},
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
-"opens":"07:00","closes":"20:00"
-}]
-}
-</script>
-
-<!-- FAQ SCHEMA -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"What can be cleaned with pressure washing?",
-"acceptedAnswer":{"@type":"Answer","text":"Driveways, patios, pathways, decking, walls, brickwork, render, fencing and outdoor hard surfaces can all be safely cleaned using professional pressure washing."}
-},
-{
-"@type":"Question",
-"name":"Do you offer pressure washing in areas outside Askern?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We cover all areas within 10 miles including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley and more."}
-},
-{
-"@type":"Question",
-"name":"Is pressure washing safe for all surfaces?",
-"acceptedAnswer":{"@type":"Answer","text":"With the correct pressure settings and cleaning methods, pressure washing is safe for most outdoor surfaces. We assess every job before starting."}
-},
-{
-"@type":"Question",
-"name":"Can you remove moss, algae and weeds?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We remove moss, algae, lichen, organic growth and dirt build-up, restoring surfaces to a clean and safe condition."}
-}
-]}
-</script>
 </head>
 
 <body>
@@ -160,7 +144,7 @@ footer a{ color:#fff; margin:0 8px; text-decoration:none; }
 <header>
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
-<a href="/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a>
 <br>
 <a href="tel:07735873694" class="call-btn">Call Now: 07735 873694</a>
 </header>
@@ -174,41 +158,65 @@ Welcome to <strong>Home Repairs 4U</strong> — your trusted local specialist fo
 With over 30 years of industry experience, we provide reliable exterior cleaning that restores tired, weathered and dirty surfaces back to a bright, clean, safe condition.
 </p>
 
-<!-- QUOTE CALCULATOR (UNCHANGED TEXT) -->
-<section style="margin:30px auto;padding:25px;border:1px solid #ccc;">
+<section>
 <h2>Instant Pressure Washing Quote</h2>
 <p>Use this calculator to get an estimate for your pressure washing service.</p>
 
-<label for="sqm">How many square metres?*</label><br>
-<input type="number" id="sqm" min="1" step="0.01" required style="width:100%;padding:10px;font-size:16px;"><br><br>
+<form id="quoteForm">
 
-<input type="checkbox" id="jetwash" checked> Jet wash only<br>
-<input type="checkbox" id="fungicide"> Fungicide treatment<br>
-<input type="checkbox" id="hardbrush"> Hard brush<br>
-<input type="checkbox" id="resanding"> Resanding<br>
-<input type="checkbox" id="sealing"> Sealing<br><br>
+<label for="sqm">How many square metres? *</label>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
 
-<button onclick="calculateQuote()" class="call-btn">Get Quote</button>
+<div class="form-option">
+<input type="checkbox" id="jetwash" checked>
+<label for="jetwash">Jet wash only</label>
+</div>
+
+<div class="form-option">
+<input type="checkbox" id="fungicide">
+<label for="fungicide">Fungicide treatment</label>
+</div>
+
+<div class="form-option">
+<input type="checkbox" id="hardbrush">
+<label for="hardbrush">Hard brush</label>
+</div>
+
+<div class="form-option">
+<input type="checkbox" id="resanding">
+<label for="resanding">Resanding</label>
+</div>
+
+<div class="form-option">
+<input type="checkbox" id="sealing">
+<label for="sealing">Sealing</label>
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Quote</button>
+
+</form>
+
 <div id="quoteResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
 </section>
 
 <script>
 function calculateQuote(){
-const sqm=parseFloat(document.getElementById("sqm").value);
+const sqm=parseFloat(document.getElementById('sqm').value);
 if(!sqm||sqm<=0){alert("Please enter a valid number of square metres.");return;}
+
 let total=40;
 let options=["Base service fee (travel, setup & loading): £40.00"];
+
 if(jetwash.checked){let p=sqm*2.5;total+=p;options.push(`Jet wash only: £${p.toFixed(2)}`);}
 if(fungicide.checked){let p=sqm*0.8;total+=p;options.push(`Fungicide treatment: £${p.toFixed(2)}`);}
 if(hardbrush.checked){let p=sqm*0.7;total+=p;options.push(`Hard brush: £${p.toFixed(2)}`);}
 if(resanding.checked){let p=sqm*3.5;total+=p;options.push(`Resanding: £${p.toFixed(2)}`);}
 if(sealing.checked){let p=sqm*4.5;total+=p;options.push(`Sealing: £${p.toFixed(2)}`);}
-document.getElementById("quoteResult").innerHTML=
+
+document.getElementById("quoteResult").innerHTML =
 `<ul>${options.map(o=>`<li>${o}</li>`).join("")}</ul><p>Total price: £${total.toFixed(2)}</p>`;
 }
 </script>
-
-<!-- REMAINING TEXT CONTINUES EXACTLY AS PROVIDED -->
 
 <p>
 Outdoor surfaces face constant exposure to the elements. Rain, algae, moss, car oil, tyre marks, mud, UV fading and pollution all contribute to the gradual decline of driveways, patios, decking and pathways. Many homeowners are surprised by how quickly surfaces lose their original colour and how easily they can become slippery, unsafe and unattractive.
@@ -223,7 +231,7 @@ Block paving, concrete, resin-bound and tarmac driveways collect years of dirt, 
 Driveway cleaning is one of the most transformative exterior services — often giving a property an instant visual lift.
 </p>
 
-<img src="/images/driveway-pressure-wash.webp" alt="Exterior pressure washing service driveway Askern Doncaster" style="width:100%;border-radius:6px;">
+<img src="/images/driveway-pressure-wash.webp" alt="Driveway pressure washing Askern" style="width:100%;border-radius:6px;">
 
 <h3>✔ Patio & Paving Cleaning</h3>
 <p>
@@ -231,7 +239,7 @@ Patios often accumulate moss, weeds, lichen and black spot due to moisture and l
 Whether your patio is sandstone, limestone, concrete, porcelain or block paving, we restore its natural colour and remove slippery buildup.
 </p>
 
-<img src="/images/patio-jet-wash.webp" alt="Exterior patio pressure wash Askern" style="width:100%;border-radius:6px;">
+<img src="/images/patio-jet-wash.webp" alt="Patio jet washing Askern" style="width:100%;border-radius:6px;">
 
 <h3>✔ Decking Cleaning</h3>
 <p>
@@ -247,7 +255,7 @@ Exterior walls and fences gradually darken as airborne pollutants and moss embed
 Pressure washing these surfaces instantly freshens the entire property exterior.
 </p>
 
-<img src="/images/pressure-wash-1.webp" alt="Exterior wall pressure washing Askern" style="width:100%;border-radius:6px;">
+<img src="/images/pressure-wash-1.webp" alt="Wall pressure washing Askern" style="width:100%;border-radius:6px;">
 
 <h3>✔ Pathway, Steps & Access Area Cleaning</h3>
 <p>
