--- a/services/pressure-washing.html
+++ b/services/pressure-washing.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Professional Pressure Washing in Askern DN6 | Driveways, Patios & Exterior Cleaning</title>
-<link rel="icon" href="/favicon.png" type="image/png">
 
 <link rel="canonical" href="https://homerepairs4u.com/services/pressure-washing.html">
-<meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Fast, insured and affordable. Call 07735 873694.">
+<meta name="description" content="Professional pressure washing and exterior cleaning in Askern DN6 and all nearby areas within 10 miles. Driveways, patios, decking, walls, paths and more. Call 07735 873694.">
+<meta name="robots" content="index, follow">
 
-<link rel="preload" as="image" href="/images/logo.webp" />
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
-/* GENERAL PAGE STYLES */
+html{ -webkit-text-size-adjust:100%; }
+
 body{
 margin:0;
-padding:0;
 font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
-html{
--webkit-text-size-adjust: 100%;     
 }
-input#sqm {
-font-size: 25px;
-}
+
 /* HEADER */
 header{
 text-align:center;
@@ -34,13 +32,11 @@ background:#fff;
 border-bottom:4px solid #27ae60;
 }
 
-/* LOGO (explicit width/height for CLS) */
 .logo{
 max-height:90px;
 width:auto;
 }
 
-/* CALL BUTTON – High Contrast */
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -48,35 +44,14 @@ padding:14px 28px;
 background:#000;
 color:#fff;
 font-size:19px;
-text-decoration:none;
 font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
+text-decoration:none;
+min-height:48px;
 }
-.call-btn:hover{
-background:#333;
-color:#fff;
-}
- .lightbox {
-display: none;
-position: fixed;
-z-index: 9999;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background: rgba(0,0,0,0.85);
-align-items: center;
-justify-content: center;
-}
-.lightbox img {
-max-width: 95%;
-max-height: 95%;
-border-radius: 6px;
-box-shadow: 0 0 20px #000;
-}
-.lightbox:target { display: flex; } 
-}
+.call-btn:hover{ background:#333; }
+
 /* CONTENT */
 main{
 max-width:900px;
@@ -85,9 +60,65 @@ background:#fff;
 padding:25px 15px;
 }
 
-h1,h2,h3{
-color:#111;
+h1,h2,h3{ color:#111; }
+
+/* FORM ACCESSIBILITY */
+form label{
+display:block;
+font-weight:bold;
+margin-bottom:6px;
+cursor:pointer;
 }
+
+input[type="number"]{
+width:100%;
+padding:12px;
+font-size:16px;
+margin-bottom:15px;
+}
+
+.form-option{
+display:flex;
+align-items:center;
+gap:12px;
+padding:10px 8px;
+margin-bottom:12px;
+}
+
+.form-option input{
+width:22px;
+height:22px;
+}
+
+button{
+min-height:48px;
+min-width:48px;
+cursor:pointer;
+}
+
+button:focus,
+a:focus,
+input:focus{
+outline:3px solid #27ae60;
+outline-offset:2px;
+}
+
+/* LIGHTBOX */
+.lightbox{
+display:none;
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+z-index:9999;
+align-items:center;
+justify-content:center;
+}
+.lightbox img{
+max-width:95%;
+max-height:95%;
+border-radius:6px;
+}
+.lightbox:target{ display:flex; }
 
 /* FOOTER */
 footer{
@@ -98,96 +129,24 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
+footer a{
+color:#fff;
+text-decoration:none;
+margin:6px 10px;
+display:inline-block;
+padding:8px 12px;
+}
 </style>
-
-<!-- UPDATED LOCAL BUSINESS SCHEMA FOR PRESSURE WASHING -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"HomeAndConstructionBusiness",
-"name":"Home Repairs 4U",
-"image":"https://steely1968.github.io/images/logo.webp",
-"url":"https://steely1968.github.io/",
-"@id":"https://steely1968.github.io/#pressurewashing",
-"description":"Professional pressure washing, jet washing and exterior surface cleaning in Askern DN6 and all areas within 10 miles.",
-"telephone":"+447735873694",
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"postalCode":"DN6",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
-},
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
-},
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":[
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
-"opens":"07:00","closes":"20:00"
-}],
-"serviceType":[
-"Pressure washing",
-"Jet washing",
-"Driveway cleaning",
-"Patio cleaning",
-"Decking cleaning",
-"Exterior surface cleaning"
-]
-}
-</script>
-
-<!-- FAQ SCHEMA UPDATED FOR PRESSURE WASHING -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"What can be cleaned with pressure washing?",
-"acceptedAnswer":{"@type":"Answer","text":"Driveways, patios, pathways, decking, walls, brickwork, render, fencing and outdoor hard surfaces can all be safely cleaned using professional pressure washing."}
-},
-{
-"@type":"Question",
-"name":"Do you offer pressure washing in areas outside Askern?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We cover all areas within 10 miles including Campsall, Norton, Skellow, Carcroft, Adwick, Bentley and more."}
-},
-{
-"@type":"Question",
-"name":"Is pressure washing safe for all surfaces?",
-"acceptedAnswer":{"@type":"Answer","text":"With the correct pressure settings and cleaning methods, pressure washing is safe for most outdoor surfaces. We assess every job before starting."}
-},
-{
-"@type":"Question",
-"name":"Can you remove moss, algae and weeds?",
-"acceptedAnswer":{"@type":"Answer","text":"Yes. We remove moss, algae, lichen, organic growth and dirt build-up, restoring surfaces to a clean and safe condition."}
-}
-]}
-</script>
-
 </head>
 
 <body>
 
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
-Home
-</a>
-</div>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a>
+<br>
+<a href="tel:07735873694" class="call-btn">Call Now: 07735 873694</a>
 </header>
 
 <main>
@@ -198,91 +157,67 @@ Home
 Welcome to <strong>Home Repairs 4U</strong> — your trusted local specialist for <strong>pressure washing</strong>, <strong>jet washing</strong> and <strong>professional outdoor surface cleaning</strong> throughout <strong>Askern DN6</strong> and every surrounding area within a 10-mile radius.
 With over 30 years of industry experience, we provide reliable exterior cleaning that restores tired, weathered and dirty surfaces back to a bright, clean, safe condition.
 </p>
-<section id="pressure-wash-quote" style="max-width:900px;margin:30px auto;padding:25px;background:#fff;border:1px solid #ccc;">
+
+<section>
 <h2>Instant Pressure Washing Quote</h2>
 <p>Use this calculator to get an estimate for your pressure washing service.</p>
 
 <form id="quoteForm">
-<label for="sqm">How many square metres?*</label><br>
-<input type="number" id="sqm" name="sqm" min="1" step="0.01" required style="width:100%;padding:10px;margin-bottom:15px;font-size16px;"><br>
 
-<input type="checkbox" id="jetwash" name="jetwash" checked>
-<label for="jetwash">Jet wash only</label><br>
+<label for="sqm">How many square metres? *</label>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
 
-<input type="checkbox" id="fungicide" name="fungicide">
-<label for="fungicide">Fungicide treatment</label><br>
+<div class="form-option">
+<input type="checkbox" id="jetwash" checked>
+<label for="jetwash">Jet wash only</label>
+</div>
 
-<input type="checkbox" id="hardbrush" name="hardbrush">
-<label for="hardbrush">Hard brush</label><br>
+<div class="form-option">
+<input type="checkbox" id="fungicide">
+<label for="fungicide">Fungicide treatment</label>
+</div>
 
-<input type="checkbox" id="resanding" name="resanding">
-<label for="resanding">Resanding</label><br>
+<div class="form-option">
+<input type="checkbox" id="hardbrush">
+<label for="hardbrush">Hard brush</label>
+</div>
 
-<input type="checkbox" id="sealing" name="sealing">
-<label for="sealing">Sealing</label><br>
+<div class="form-option">
+<input type="checkbox" id="resanding">
+<label for="resanding">Resanding</label>
+</div>
 
-<button type="button" onclick="calculateQuote()" style="margin-top:15px;padding:12px 24px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;font-weight:bold;">Get Quote</button>
+<div class="form-option">
+<input type="checkbox" id="sealing">
+<label for="sealing">Sealing</label>
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Quote</button>
+
 </form>
 
 <div id="quoteResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
 </section>
 
 <script>
-function calculateQuote() {
-// Accept comma or dot decimals
-const sqmInput = document.getElementById('sqm').value.trim().replace(',', '.');
-const sqm = parseFloat(sqmInput);
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Please enter a valid number of square metres.");return;}
 
-if (isNaN(sqm) || sqm <= 0) {
-alert("Please enter a valid number of square metres.");
-return;
-}
+let total=40;
+let options=["Base service fee (travel, setup & loading): £40.00"];
 
-let total = 40; // Base service fee
-let selectedOptions = [];
+if(jetwash.checked){let p=sqm*2.5;total+=p;options.push(`Jet wash only: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.8;total+=p;options.push(`Fungicide treatment: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.7;total+=p;options.push(`Hard brush: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.5;total+=p;options.push(`Resanding: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.5;total+=p;options.push(`Sealing: £${p.toFixed(2)}`);}
 
-// Add explanation for the base fee (always included)
-selectedOptions.push(`Base service fee (travel, setup & loading): £40.00`);
-
-// Options
-if (document.getElementById('jetwash').checked) {
-let price = sqm * 2.5;
-selectedOptions.push(`Jet wash only: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('fungicide').checked) {
-let price = sqm * 0.8;
-selectedOptions.push(`Fungicide treatment: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('hardbrush').checked) {
-let price = sqm * 0.7;
-selectedOptions.push(`Hard brush: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('resanding').checked) {
-let price = sqm * 3.5;
-selectedOptions.push(`Resanding: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('sealing').checked) {
-let price = sqm * 4.5;
-selectedOptions.push(`Sealing: £${price.toFixed(2)}`);
-total += price;
-}
-
-total = total.toFixed(2);
-
-// Build HTML Output
-let resultHTML = `<p><strong>You selected:</strong></p><ul>`;
-selectedOptions.forEach(option => {
-resultHTML += `<li>${option}</li>`;
-});
-resultHTML += `</ul><p><strong>Total price: £${total}</strong></p>`;
-
-document.getElementById('quoteResult').innerHTML = resultHTML;
+document.getElementById("quoteResult").innerHTML =
+`<ul>${options.map(o=>`<li>${o}</li>`).join("")}</ul><p>Total price: £${total.toFixed(2)}</p>`;
 }
 </script>
+
 <p>
 Outdoor surfaces face constant exposure to the elements. Rain, algae, moss, car oil, tyre marks, mud, UV fading and pollution all contribute to the gradual decline of driveways, patios, decking and pathways. Many homeowners are surprised by how quickly surfaces lose their original colour and how easily they can become slippery, unsafe and unattractive.
 Fortunately, most of this can be reversed with the right pressure washing equipment and experienced hands.
@@ -295,73 +230,33 @@ Fortunately, most of this can be reversed with the right pressure washing equipm
 Block paving, concrete, resin-bound and tarmac driveways collect years of dirt, moss, tyre marks, algae and oil. Our professional cleaning process lifts deep-set grime and organic growth, restoring both appearance and safety. We carefully adjust pressure settings depending on the surface material to prevent damage.
 Driveway cleaning is one of the most transformative exterior services — often giving a property an instant visual lift.
 </p>
-<a href="#driveway-lightbox">
-<img src="/images/driveway-pressure-wash.webp"
-alt="Exterior pressure washing service driveway Askern Doncaster"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
 
-<div id="driveway-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/driveway-pressure-wash.webp" alt="Exterior pressure washing service driveway Askern Doncaster example enlarged">
-</a>
-</div>
-<h3>✔ Pathway, Steps & Access Area Cleaning</h3>
-<p>
+<img src="/images/driveway-pressure-wash.webp" alt="Driveway pressure washing Askern" style="width:100%;border-radius:6px;">
+
 <h3>✔ Patio & Paving Cleaning</h3>
 <p>
 Patios often accumulate moss, weeds, lichen and black spot due to moisture and limited sunlight. We use specialist pressure washing techniques to remove stubborn debris without damaging pointing or the stone surface.
 Whether your patio is sandstone, limestone, concrete, porcelain or block paving, we restore its natural colour and remove slippery buildup.
 </p>
-<a href="#patio-lightbox">
-<img src="/images/patio-jet-wash.webp"
-alt="Exterior patio pressure wash for your home Askern, Campsall, Doncaster"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
 
-<div id="patio-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/patio-jet-wash.webp" alt="Exterior patio pressure wash for your home Askern, Campsall, Doncaster example enlarged">
-</a>
-</div>
+<img src="/images/patio-jet-wash.webp" alt="Patio jet washing Askern" style="width:100%;border-radius:6px;">
+
 <h3>✔ Decking Cleaning</h3>
 <p>
- 
 Wooden decking requires skilled handling during cleaning. Too much pressure can cause splintering; too little won’t remove ingrained algae. Our approach gently yet effectively lifts dirt, mould and organic growth, leaving your decking clean and ready for sealing or painting if needed.
 A clean deck not only looks better but is far safer underfoot.
 </p>
- <a href="#deck-lightbox">
-<img src="/images/deck.webp"
-alt="Decking jet-wash Doncaster Askern Norton"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
 
-<div id="deck-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/deck.webp" alt="Decking jet-wash Doncaster Askern Norton example enlarged">
-</a>
-</div>
+<img src="/images/deck.webp" alt="Decking jet wash Askern" style="width:100%;border-radius:6px;">
 
 <h3>✔ Walls, Fences & Brickwork Cleaning</h3>
 <p>
 Exterior walls and fences gradually darken as airborne pollutants and moss embed into the surface. Our cleaning methods brighten brick, concrete, stone, render and timber without harming the material.
 Pressure washing these surfaces instantly freshens the entire property exterior.
 </p>
-<a href="#pressure-lightbox">
-<img src="/images/pressure-wash-1.webp"
-alt="Exterior pressure washing service cobbles stone Askern Doncaster"
-style="width:100%; max-width:900px; display:block; margin:20px auto; border-radius:6px;"
-loading="lazy">
-</a>
 
-<div id="pressure-lightbox" class="lightbox">
-<a href="#">
-<img src="/images/pressue-wash-1.webp" alt="Exterior pressure washing service cobbles stone Askern Doncaster example enlarged">
-</a>
-</div>
+<img src="/images/pressure-wash-1.webp" alt="Wall pressure washing Askern" style="width:100%;border-radius:6px;">
+
 <h3>✔ Pathway, Steps & Access Area Cleaning</h3>
 <p>
 Paths and steps can quickly become hazardous when covered with algae or moss. Regular pressure washing reduces slip risk and keeps access areas safe for families, visitors and customers.
@@ -421,24 +316,22 @@ Whether you're in Askern or anywhere within 10 miles, simply call us and we’ll
 </p>
 
 <div style="text-align:center;margin:35px 0;">
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694" class="call-btn">Call Now: 07735 873694</a>
 </div>
 
 </main>
 
 <footer>
 © Home Repairs 4U | Pressure Washing • Jet Washing • Exterior Cleaning | Askern DN6 | Call 07735 873694
-  <footer style="background-color: black; padding: 20px; text-align: center;">
-<p style="color: white;">Our Services:</p>
-<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
-<a href="/services/fence-installation.html" style="color: white; margin: 0 10px;">Fence Installation</a>
-<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
-<a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
-<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
+<br>
+<a href="/services/Exterior-decorating.html">Exterior Decorating</a>
+<a href="/services/fence-installation.html">Fence Installation</a>
+<a href="/services/garden.html">Garden</a>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" rel="noopener">Facebook</a>
 </footer>
-<p>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" style="color:white; margin:0 8px;">Facebook</a>
-</p>
 
 </body>
 </html>
