--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -1,1 +1,310 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Pressure Washing in Carcroft, Doncaster | Driveway & Patio Cleaning</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
+
+<meta name="description" content="Local pressure washing in Carcroft, Doncaster. Driveway, patio, decking and exterior cleaning by experienced professionals. Free quotes. Call 07735 873694.">
+
+<meta name="robots" content="index, follow">
+
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
+
+<style>
+html{ -webkit-text-size-adjust:100%; }
+
+body{
+margin:0;
+font-family:Arial, sans-serif;
+background:#f7f7f7;
+color:#222;
+line-height:1.65;
+}
+
+/* HEADER */
+header{
+text-align:center;
+padding:26px 12px;
+background:#fff;
+border-bottom:4px solid #1abc9c;
+}
+
+.logo{ max-height:90px; width:auto; }
+
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:15px 30px;
+background:#111;
+color:#fff;
+font-size:19px;
+font-weight:bold;
+border-radius:6px;
+text-decoration:none;
+min-height:48px;
+}
+.call-btn:hover{ background:#333; }
+
+/* CONTENT */
+main{
+max-width:920px;
+margin:0 auto;
+background:#fff;
+padding:28px 18px;
+}
+
+h1,h2,h3{ color:#111; }
+
+/* FORM */
+form label{
+font-weight:bold;
+margin-bottom:6px;
+display:block;
+cursor:pointer;
+}
+
+input[type="number"]{
+width:100%;
+padding:12px;
+font-size:16px;
+margin-bottom:18px;
+}
+
+.form-row{
+display:flex;
+align-items:center;
+gap:14px;
+padding:12px 10px;
+margin-bottom:12px;
+}
+
+.form-row input{
+width:22px;
+height:22px;
+}
+
+button{
+cursor:pointer;
+min-height:48px;
+}
+
+button:focus,
+a:focus,
+input:focus{
+outline:3px solid #1abc9c;
+outline-offset:2px;
+}
+
+/* FOOTER */
+footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:26px 15px;
+margin-top:40px;
+font-size:14px;
+}
+footer a{
+color:#fff;
+text-decoration:none;
+padding:8px 12px;
+display:inline-block;
+}
+</style>
+
+<!-- LOCAL BUSINESS SCHEMA (UNIQUE) -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HousePainter",
+"@id":"https://homerepairs4u.com/local/pressure-washing-carcroft.html#business",
+"name":"Home Repairs 4U – Carcroft Pressure Washing",
+"url":"https://homerepairs4u.com/local/pressure-washing-carcroft.html",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"description":"Local pressure washing and exterior surface cleaning services in Carcroft, Doncaster.",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Carcroft",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
+},
+"areaServed":{
+"@type":"AdministrativeArea",
+"name":"Carcroft, Doncaster"
+},
+"openingHours":"Mo-Su 07:00-20:00"
+}
+</script>
+
+<!-- FAQ SCHEMA (UNIQUE QUESTIONS) -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"What types of surfaces can you clean in Carcroft?",
+"acceptedAnswer":{"@type":"Answer","text":"We clean driveways, patios, paths, decking, brickwork, walls, steps and other external hard surfaces using pressure washing methods suited to each material."}
+},
+{
+"@type":"Question",
+"name":"Is pressure washing suitable for older surfaces?",
+"acceptedAnswer":{"@type":"Answer","text":"Yes. Pressure levels are adjusted depending on age and condition to ensure effective cleaning without surface damage."}
+},
+{
+"@type":"Question",
+"name":"Do you offer pressure washing for residential properties only?",
+"acceptedAnswer":{"@type":"Answer","text":"We provide pressure washing for both residential and small commercial properties throughout Carcroft and nearby areas."}
+}
+]}
+</script>
+
+</head>
+
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a>
+<br>
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<h1>Pressure Washing Services in Carcroft, Doncaster</h1>
+
+<p>
+<strong>Home Repairs 4U</strong> provides professional <strong>pressure washing services in Carcroft, Doncaster</strong>, helping homeowners and landlords restore the appearance of outdoor surfaces.
+From driveways and patios to paths, walls and decking, we remove dirt, algae and staining that builds up over time.
+</p>
+
+<p>
+External surfaces in Carcroft are constantly exposed to rain, traffic residue, moss and air pollution. Without regular cleaning, these surfaces can become slippery, discoloured and difficult to maintain. Our pressure washing service is designed to reverse this damage and significantly improve kerb appeal.
+</p>
+
+<h2>Get a Price Estimate for Pressure Washing</h2>
+<p>Use the estimator below to calculate an approximate cost based on area size and treatment options.</p>
+
+<form id="quoteForm">
+
+<label for="sqm">Approximate surface area (square metres)</label>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
+
+<div class="form-row">
+<input type="checkbox" id="jetwash" checked>
+<label for="jetwash">Standard pressure wash</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="fungicide">
+<label for="fungicide">Algae and moss inhibitor treatment</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="hardbrush">
+<label for="hardbrush">Manual scrubbing for stubborn areas</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="resanding">
+<label for="resanding">Block paving re-sanding</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="sealing">
+<label for="sealing">Protective surface sealant</label>
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">
+Calculate Estimate
+</button>
+
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Please enter a valid surface area.");return;}
+
+let total=45;
+let breakdown=["Initial setup and travel: £45.00"];
+
+if(jetwash.checked){let p=sqm*2.6;total+=p;breakdown.push(`Standard pressure wash: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.9;total+=p;breakdown.push(`Algae inhibitor treatment: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.8;total+=p;breakdown.push(`Manual scrubbing: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.8;total+=p;breakdown.push(`Block paving re-sanding: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.8;total+=p;breakdown.push(`Surface sealing: £${p.toFixed(2)}`);}
+
+document.getElementById("quoteResult").innerHTML =
+`<ul>${breakdown.map(b=>`<li>${b}</li>`).join("")}</ul><p>Estimated total: £${total.toFixed(2)}</p>`;
+}
+</script>
+
+<h2>Exterior Surfaces We Clean in Carcroft</h2>
+
+<h3>Driveway Cleaning</h3>
+<p>
+Driveways in Carcroft are frequently affected by tyre marks, oil stains and organic growth. Our pressure washing process lifts embedded grime from block paving, concrete and tarmac, restoring a cleaner and safer finish.
+</p>
+
+<h3>Patio and Paving Cleaning</h3>
+<p>
+Patios often develop black spot, moss and weed growth in shaded areas. We clean stone, concrete and porcelain patios using controlled pressure to protect joints and surface integrity.
+</p>
+
+<h3>Decking Restoration</h3>
+<p>
+Timber decking requires careful handling. Our cleaning approach removes algae and surface dirt while preserving the wood grain and reducing the risk of splintering.
+</p>
+
+<h3>Walls, Steps and Pathways</h3>
+<p>
+Pressure washing external walls, garden steps and access paths can dramatically improve the overall appearance of your property. Regular cleaning also reduces slip hazards in damp conditions.
+</p>
+
+<h2>Why Carcroft Customers Choose Home Repairs 4U</h2>
+
+<ul>
+<li>✔ Over three decades of practical experience</li>
+<li>✔ Fully insured exterior cleaning services</li>
+<li>✔ Local Doncaster-based business</li>
+<li>✔ Transparent pricing and clear estimates</li>
+<li>✔ Careful cleaning methods tailored to each surface</li>
+</ul>
+
+<h2>Book Pressure Washing in Carcroft Today</h2>
+
+<p>
+If your outdoor surfaces are looking tired, slippery or heavily stained, our pressure washing service can make a noticeable difference.
+We serve Carcroft and nearby Doncaster areas and are happy to provide advice or arrange a visit.
+</p>
+
+<div style="text-align:center;margin:36px 0;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+© Home Repairs 4U | Pressure Washing Services in Carcroft, Doncaster
+<br>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/fence-installation.html">Fencing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" rel="noopener">Facebook</a>
+</footer>
+
+</body>
+</html>
